--- a/src/assets/css/launcher.css
+++ b/src/assets/css/launcher.css
@@ -17,6 +17,17 @@ body {
     background-repeat: no-repeat;
 }
 
+body::after {
+    position: fixed;
+    content: "";
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.50);
+    z-index: 0;
+}
+
 img {
     -webkit-user-drag: none;
     user-select: none;
