--- a/src/assets/css/panels/settings.css
+++ b/src/assets/css/panels/settings.css
@@ -3,9 +3,7 @@
     bottom: 0;
     width: 100%;
     height: 70px;
-    border-top-left-radius: 40px;
-    border-top-right-radius: 40px;
-    background: #00000080;
+    background: #000000;
     display: flex;
     justify-content: center;
 }
@@ -95,11 +93,12 @@
     border: none;
     border-radius: 15px;
     font: normal normal bold 30px/40px Poppins;
-    color: #D1D1D1;
-    background-color: #303030;
-    box-shadow: 1px 2px 5px #585858;
+    color: #f1f1f1;
+    background-color: rgba(0, 0, 0, 0.90);
+    backdrop-filter: blur(6px);
     margin: 20px 0;
     margin-bottom: 10px;
+    cursor: pointer;
 }
 
 .accounts {
@@ -109,8 +108,7 @@
 
 .account {
     display: inline-block;
-    background: #ffffff;
-    border: 4px solid #ffffff;
+    background: #000000;
     font: normal normal bold 30px/40px Poppins;
     width: 500px;
     height: 100px;
@@ -121,7 +119,7 @@
 
 .account-image {
     position: absolute;
-    border-radius: 31px;
+    border-radius: 15px;
     height: 70px;
     margin: 15px 20px;
     pointer-events: none;
@@ -136,6 +134,7 @@
     overflow: hidden;
     max-width: 29ch;
     pointer-events: none;
+    color: white;
 }
 
 .account-uuid {
@@ -146,17 +145,16 @@
     overflow: hidden;
     max-width: 29ch;
     pointer-events: none;
+    color: rgb(129, 129, 129);
 }
 
 .account-delete {
     margin: -60px 415px;
     color: #f73434;
     font-size: 50px;
-    background: #353535c7;
-    box-shadow: 0 0 5px #353535c7;
+    background: transparent;
     width: 65px;
     height: 65px;
-    border-radius: 100%;
     cursor: pointer;
     text-align: center;
 }
@@ -168,7 +166,7 @@
 }
 
 .active-account {
-    background: #ddd6d6;
+    background: #0f0f0f;
 }
 
 
@@ -179,7 +177,8 @@
  ******************************************************************************/
 
 .java-settings {
-    background: #292929;
+    background-color: rgba(0, 0, 0, 0.90);
+    backdrop-filter: blur(6px);
     border-radius: 20px;
     width: 90%;
     margin: 0 auto;
