--- a/src/assets/css/panels/home.css
+++ b/src/assets/css/panels/home.css
@@ -110,7 +110,7 @@
 
 .body-home {
     display: flex;
-    height: 78vh;
+    height: calc(100vh - 70px - 3rem);
     margin: 3rem 2rem;
 }
 
@@ -192,6 +192,13 @@
 .news-content {
     position: relative;
     width: 100%;
+}
+
+.news-content img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+    transition: filter .2s;
 }
 
 .bbWrapper {
